Fix crash when BLAST DB is missing
Add Docker Hub pull instructions to the readme file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   rucs:
     build: .
-    image: rucs
+    image: genomicepidemiology/rucs:1.0.1
     volumes:
       - .:/workdir
       - ${BLASTDB}:/blastdb
