Improve CLI messages
Improve messages for test example
Improve warning message for missing BLAST annotation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   rucs:
     build: .
-    image: genomicepidemiology/rucs:1.0.1
+    image: rucs
     volumes:
       - .:/workdir
       - ${BLASTDB}:/blastdb
